--- a/css/nomq_preview_master_a-master.css
+++ b/css/nomq_preview_master_a-master.css
@@ -1,1 +1,1 @@
-#u235-4,#u245-4,#u254-4{display:block;vertical-align:top;}
+#u235-4,#u245-4,#u254-4{display:block;vertical-align:top;}#u9946{background-image:url("../images/dach-logo-medium2.png?crc=265151554");}#u10200{border-width:0px;border-color:transparent;background-color:transparent;}#u9949,#u9948,#u9947{background-color:#7F7F7F;opacity:0.49;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=49)";filter:alpha(opacity=49);-webkit-transform:matrix(0,1,-1,0,133,132);-ms-transform:matrix(0,1,-1,0,133,132);transform:matrix(0,1,-1,0,133,132);}
